# nishi_toy

./: README.md  main.py  pyproject.toml
core_logic/: agent.py  pre_filter.py
data_ingestion/: scrapper.ipynb  scrapper.py
scripts/: analyze_length.py  run_pipeline.py
scripts/batch_test/: 260308_223522.json  260308_230422.json  260308_232741.json  260308_235557.json  batch_results_260308_220235.json  batch_results_init.json
storage/: store.py
